--- a/org.argeo.suite.workbench.rap/theme/argeo-classic/workbench-ext.css
+++ b/org.argeo.suite.workbench.rap/theme/argeo-classic/workbench-ext.css
@@ -4,8 +4,7 @@
 
 /* Extends the default RAP theme. TODO: create a complete homogeneous theme */
 
-
-/** Uncomment this for dev only to show all composite borders */ 
+/** Uncomment this for dev only to show all composite borders */
 /*
 Composite, .showBorder, Composite.showBorder{
 	border:1px solid fuchsia;
@@ -15,131 +14,157 @@ Label {
 	border:1px solid blue;
 }
 */
-/** DEFAULT STYLE - Override some styling provided by RAP **/
 
+/** DEFAULT STYLE - Override some styling provided by RAP **/
 * {
-  color: #333333;
-  background-color: white;
-  background-image: none;
-  font: 12px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
+	color: #333333;
+	background-color: white;
+	background-image: none;
+	font: 12px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
 }
 
 *:disabled {
-  color: #555555;
+	color: #555555;
 }
 
-Text,
-Combo-Field, DateTime-Field {
-  padding: 2px 8px 2px 8px;
+Text, Combo-Field, DateTime-Field {
+	padding: 2px 8px 2px 8px;
 }
 
-Text[BORDER],
-Text[MULTI][BORDER] {
-  box-shadow: inset 0 0 1px #bdbdbd;
+/* Texts */
+Text[BORDER], Text[MULTI][BORDER] {
+	box-shadow: inset 0 0 1px #bdbdbd;
 }
 
+/* Force show border on text even when disabled */
+Text.force_border[BORDER]:disabled, Text.force_border[MULTI][BORDER]:disabled
+	{
+	box-shadow: none;
+	border: 1px solid #a4a4a4;
+}
+
+/* Text[BORDER]:disabled,
+Text[MULTI][BORDER]:disabled {
+  box-shadow: none;
+  border: 1px solid white;
+}
+*/
+
+/* Shows that focus has been gained */
+Text[BORDER]:focused, Text[MULTI][BORDER]:focused, Shell.popup_shell {
+	box-shadow: 1px 1px 2px black;
+	border: 1px solid #a4a4a4;
+}
 
 Combo {
-  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
-  padding: 2px 8px 2px 8px;
+	font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
+	padding: 2px 8px 2px 8px;
 }
 
-Combo,
-Combo[BORDER] {
-  box-shadow: inset 0 0 1px #bdbdbd;
+Combo, Combo[BORDER] {
+	box-shadow: inset 0 0 1px #bdbdbd;
 }
 
-Combo:focused,
-Combo[BORDER]:focused,
-DropDown, 
-Combo-List {
-  box-shadow: 1px 1px 2px black; 
-  border: 1px solid #a4a4a4;
+Combo:focused, Combo[BORDER]:focused, DropDown, Combo-List {
+	box-shadow: 1px 1px 2px black;
+	border: 1px solid #a4a4a4;
 }
 
 Widget-ToolTip {
-  animation: fadeIn 250ms ease-in, fadeOut 250ms ease-in;
+	animation: fadeIn 250ms ease-in, fadeOut 250ms ease-in;
 }
 
-/** GADGETS  **/
-.people_gadget {
-  border: 1px solid #f3f3f4;
-  border-radius: 0px;
-  padding: 0px 0px;
-  margin: 0px 0px;
-  background-image: none;
-  background-color: transparent;
+/* Flat image Buttons */
+Button.flat_btn, Button[PUSH][FLAT].flat_btn, Button.flat_btn:default,
+	Button.flat_btn:disabled, Button.flat_btn:hover, Button.flat_btn:pressed,
+	Button.flat_btn:selected {
+	border: 0px solid white;
+	border-radius: 0px;
+	padding: 0px 0px;
+	background-image: none;
+	background-color: transparent;
+	animation: hoverOut 500ms ease-out;
+	cursor: pointer;
 }
 
-.people_gadget_header {
-  background-color: #f3f3f4;
-  font-color: white;
-  color: white; /*dont work */
-  font: bold 14px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
-
+/* Links */
+Link, Link-Hyperlink, Link-Hyperlink:link, Link-Hyperlink:visited,
+	Link-Hyperlink:active {
+	color: #333333;
+	background-color: #ffffff;
+	background-image: none;
+	text-shadow: none;
+	text-decoration: none;
 }
 
-/** HEADER **/
-.people_entity_header {
-  font: 14px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
-  text-decoration: none;
+Link-Hyperlink:hover {
+	text-decoration: underline;
 }
 
-/** Flat image Buttons **/
-Button[PUSH][FLAT].people_flat_btn,
-Button.people_flat_btn,
-Button.people_flat_btn:default, 
-Button.people_flat_btn:disabled, 
-Button.people_flat_btn:hover, 
-Button.people_flat_btn:pressed, 
-Button.people_flat_btn:selected {
-  border: 0px solid white;
-  border-radius: 0px;
-  padding: 0px 0px;
-  background-image: none;
-  background-color: transparent;
-  animation: hoverOut 500ms ease-out;
-  cursor: pointer;
+Link-Hyperlink:disabled {
+	color: #959595;
 }
 
-/*** FORMS ****/ 
+/*** Override default links **/
+a:link {
+	color: #333333;
+	text-decoration: none;
+}
 
+a:hover {
+	text-decoration: underline;
+}
+
+/** TABLE ITEMS **/
+/* Fix invisible links on selected and hover table rows */
+Table-RowOverlay:selected, Table-RowOverlay:linesvisible:even:selected {
+	color: #333333;
+	background-color: #9aaaba;
+}
+
+Table-RowOverlay:selected:unfocused, Table-RowOverlay:linesvisible:even:selected:unfocused
+	{
+	color: #333333;
+	background-color: #a3b3c4;
+}
+
+/*** FORMS ****/
 Text.workbench_form_text {
-	box-shadow: inset 0 0 0px #bdbdbd;	
+	box-shadow: inset 0 0 0px #bdbdbd;
 	padding: 2px 8px 2px 8px;
-	border: 0px solid  #f4f6f7;
+	border: 0px solid #f4f6f7;
 }
 
 Text.workbench_form_text:focused {
 	padding: 2px 8px 2px 8px;
 	border: 2px solid red;
-	box-shadow: inset 0 0 1px #bdbdbd;	
+	box-shadow: inset 0 0 1px #bdbdbd;
 }
 
 /****** DOCUMENTS  *********/
 
 /* Breadcrumb ***/
 Button.breadCrumb_btn {
-  border: 1px solid  #f4f6f7;
-  border-radius: 3px;
-  padding: 2px 2px 2px 2px;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  animation: hoverOut 500ms ease-out;
-  cursor: pointer;
-  font-color: #00294b;
-  text-decoration: none;
+	border: 1px solid #f4f6f7;
+	border-radius: 3px;
+	padding: 2px 2px 2px 2px;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	animation: hoverOut 500ms ease-out;
+	cursor: pointer;
+	font-color: #00294b;
+	text-decoration: none;
 }
 
 Button.breadCrumb_btn:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 /* Documents lists context menu */
 .contextMenu_box {
 	border: 0px solid #fde2d5;
-  	padding: 0px;
-  	box-shadow: 2px 2px 5px #fde2d5; 
+	padding: 0px;
+	box-shadow: 2px 2px 5px #fde2d5;
 }
 
 Button[PUSH][FLAT].createFolder_btn {
@@ -158,16 +183,13 @@ Button[PUSH][FLAT].downloadFolder_btn {
 	background-image: url( theme/argeo-classic/icons/fs/downloadFolder.png);
 }
 
-Button[PUSH][FLAT].delete_btn,
-Button[PUSH][FLAT].deleteBookmark_btn {
+Button[PUSH][FLAT].delete_btn, Button[PUSH][FLAT].deleteBookmark_btn {
 	background-image: url( theme/argeo-classic/icons/fs/delete.png);
 }
 
-Button[PUSH][FLAT].rename_btn,
-Button[PUSH][FLAT].renameBookmark_btn {
+Button[PUSH][FLAT].rename_btn, Button[PUSH][FLAT].renameBookmark_btn {
 	background-image: url( theme/argeo-classic/icons/fs/rename.png);
 }
-
 
 Button[PUSH][FLAT].uploadFiles_btn {
 	background-image: url( theme/argeo-classic/icons/fs/upload.png);
@@ -177,153 +199,90 @@ Button[PUSH][FLAT].open_btn {
 	background-image: url( theme/argeo-classic/icons/fs/open.png);
 }
 
-
-Button[PUSH][FLAT].createFolder_btn,
-Button[PUSH][FLAT].shareFolder_btn,
-Button[PUSH][FLAT].bookmarkFolder_btn,
-Button[PUSH][FLAT].downloadFolder_btn,
-Button[PUSH][FLAT].delete_btn,
-Button[PUSH][FLAT].rename_btn,
-Button[PUSH][FLAT].uploadFiles_btn,
-Button[PUSH][FLAT].open_btn,
-Button[PUSH][FLAT].deleteBookmark_btn, 
-Button[PUSH][FLAT].renameBookmark_btn {
-  border: 0px solid white;
-  border-left: 10px solid transparent;
-  border-radius: 0px;
-  padding: 4px 5px 4px 24px;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: left; 
-  animation: hoverOut 500ms ease-out;
-  cursor: pointer;
+Button[PUSH][FLAT].createFolder_btn, Button[PUSH][FLAT].shareFolder_btn,
+	Button[PUSH][FLAT].bookmarkFolder_btn, Button[PUSH][FLAT].downloadFolder_btn,
+	Button[PUSH][FLAT].delete_btn, Button[PUSH][FLAT].rename_btn, Button[PUSH][FLAT].uploadFiles_btn,
+	Button[PUSH][FLAT].open_btn, Button[PUSH][FLAT].deleteBookmark_btn,
+	Button[PUSH][FLAT].renameBookmark_btn {
+	border: 0px solid white;
+	border-left: 10px solid transparent;
+	border-radius: 0px;
+	padding: 4px 5px 4px 24px;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	background-position: left;
+	animation: hoverOut 500ms ease-out;
+	cursor: pointer;
 }
 
-Button[PUSH][FLAT].createFolder_btn:hover,
-Button[PUSH][FLAT].shareFolder_btn:hover,
-Button[PUSH][FLAT].bookmarkFolder_btn:hover,
-Button[PUSH][FLAT].downloadFolder_btn:hover,
-Button[PUSH][FLAT].delete_btn:hover,
-Button[PUSH][FLAT].rename_btn:hover,
-Button[PUSH][FLAT].uploadFiles_btn:hover,
-Button[PUSH][FLAT].open_btn:hover,
-Button[PUSH][FLAT].deleteBookmark_btn:hover, 
-Button[PUSH][FLAT].renameBookmark_btn:hover  {
-  background-color: #fef0ea;
+Button[PUSH][FLAT].createFolder_btn:hover, Button[PUSH][FLAT].shareFolder_btn:hover,
+	Button[PUSH][FLAT].bookmarkFolder_btn:hover, Button[PUSH][FLAT].downloadFolder_btn:hover,
+	Button[PUSH][FLAT].delete_btn:hover, Button[PUSH][FLAT].rename_btn:hover,
+	Button[PUSH][FLAT].uploadFiles_btn:hover, Button[PUSH][FLAT].open_btn:hover,
+	Button[PUSH][FLAT].deleteBookmark_btn:hover, Button[PUSH][FLAT].renameBookmark_btn:hover
+	{
+	background-color: #fef0ea;
 }
 
-Button[PUSH][FLAT].createFolder_btn:pressed,
-Button[PUSH][FLAT].shareFolder_btn:pressed,
-Button[PUSH][FLAT].bookmarkFolder_btn:pressed,
-Button[PUSH][FLAT].shareFolder_btn:pressed,
-Button[PUSH][FLAT].downloadFolder_btn:pressed,
-Button[PUSH][FLAT].delete_btn:pressed,
-Button[PUSH][FLAT].rename_btn:pressed,
-Button[PUSH][FLAT].uploadFiles_btn:pressed,
-Button[PUSH][FLAT].open_btn:pressed,
-Button[PUSH][FLAT].deleteBookmark_btn:pressed, 
-Button[PUSH][FLAT].renameBookmark_btn:pressed{
-  background-color: #fde2d5;
+Button[PUSH][FLAT].createFolder_btn:pressed, Button[PUSH][FLAT].shareFolder_btn:pressed,
+	Button[PUSH][FLAT].bookmarkFolder_btn:pressed, Button[PUSH][FLAT].shareFolder_btn:pressed,
+	Button[PUSH][FLAT].downloadFolder_btn:pressed, Button[PUSH][FLAT].delete_btn:pressed,
+	Button[PUSH][FLAT].rename_btn:pressed, Button[PUSH][FLAT].uploadFiles_btn:pressed,
+	Button[PUSH][FLAT].open_btn:pressed, Button[PUSH][FLAT].deleteBookmark_btn:pressed,
+	Button[PUSH][FLAT].renameBookmark_btn:pressed {
+	background-color: #fde2d5;
 }
 
-/*  PEOPLE  **/
+/**  PEOPLE  **/
 
-/**  TEXTS **/
-
-/* Force show border on text even when disabled */
-Text.people_force_border[BORDER]:disabled,
-Text.people_force_border[MULTI][BORDER]:disabled {
-  box-shadow: none;
-  border: 1px solid #a4a4a4;
+/** Gadgets  **/
+.people_gadget {
+	border: 1px solid #f3f3f4;
+	border-radius: 0px;
+	padding: 0px 0px;
+	margin: 0px 0px;
+	background-image: none;
+	background-color: transparent;
 }
 
-Text[BORDER]:disabled,
-Text[MULTI][BORDER]:disabled {
-  box-shadow: none;
-  border: 1px solid white;
+.people_gadget_header {
+	background-color: #f3f3f4;
+	font-color: white;
+	color: white; /*dont work */
+	font: bold 14px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
 }
 
-/* Signals focus gained ********/
-Text[BORDER]:focused,
-Text[MULTI][BORDER]:focused,
-Shell.people_popup_shell {
-  box-shadow: 1px 1px 2px black; 
-  border: 1px solid #a4a4a4;
+/** Header **/
+.people_entity_header {
+	font: 14px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
+	text-decoration: none;
 }
 
 /** LOGO */
-.people-logoComposite {
-  background-image: gradient(linear, left top, right top,
-				from( #007a9a ),
-				to( #00294a )
-);
+.people_logoBox {
+	background-image: gradient(linear, left top, right top, from(#007a9a),
+		to(#00294a));
 }
 
-.people-logo {
-  background-color: transparent; 
+.people_logo {
+	background-color: transparent;
 }
 
-.people-logoTable {
-  background-color: transparent; 
-  color: white;
-  font: 12px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
+.people_logoTable {
+	background-color: transparent;
+	color: white;
+	font: 12px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
 }
 
 /** Corresponding links */
-Link.people-logoTable,
-Link.people-logoTable:hover,
-Link.people-logoTable:selected,
-Link.people-logoTable:selected:unfocused,
-Link.people-logoTable:linesvisible:even:hover,
-Link.people-logoTable:linesvisible:even:selected,
-Link.people-logoTable:linesvisible:even:selected:unfocused
-{
-  background-color: transparent;
-  color: #ffffff;
-  background-image: none;
-
-}
-
-/******** LINKS **************/
-
-Link, Link-Hyperlink,
-Link-Hyperlink:link, 
-Link-Hyperlink:visited, 
-Link-Hyperlink:active {
-  color: #333333;
-  background-color: #ffffff;
-  background-image: none;
-  text-shadow: none;
-  text-decoration: none;
-}
-
-Link-Hyperlink:hover {
-  text-decoration: underline;
-}
-
-Link-Hyperlink:disabled {
-  color: #959595;
-}
-
-/*** Override default links **/
-a:link { 
-	color: #333333;  text-decoration:none;  
-} 
-a:hover { 
-	text-decoration:underline; 
-}
-
-
-/** TABLE ITEMS **/
-/* Fix invisible links on selected and hover table rows */
-Table-RowOverlay:selected,
-Table-RowOverlay:linesvisible:even:selected {
-  color: #333333;
-  background-color: #9aaaba;
-}
-
-Table-RowOverlay:selected:unfocused, 
-Table-RowOverlay:linesvisible:even:selected:unfocused {
-  color: #333333;
-  background-color: #a3b3c4;
+Link.people_logoTable, 
+Link.people_logoTable:hover, 
+Link.people_logoTable:selected,
+Link.people_logoTable:selected:unfocused, 
+Link.people_logoTable:linesvisible:even:hover,
+Link.people_logoTable:linesvisible:even:selected, 
+Link.people_logoTable:linesvisible:even:selected:unfocused {
+	background-color: transparent;
+	color: #ffffff;
+	background-image: none;
 }
