Clean legacy Code, Adapt spring links

--- a/org.argeo.suite.workbench.rap/theme/argeo-classic/workbench-ext.css
+++ b/org.argeo.suite.workbench.rap/theme/argeo-classic/workbench-ext.css
@@ -313,7 +313,7 @@ Button[PUSH][FLAT].small_delete_btn{
 
 
 /** Header **/
-.people_entity_header {
+.entity_header {
 	font: 14px Helvetica, Verdana, "Lucida Sans", Arial, sans-serif;
 	text-decoration: none;
 }
