--- a/org.argeo.suite.theme.argeo2/theme.css
+++ b/org.argeo.suite.theme.argeo2/theme.css
@@ -155,17 +155,17 @@ Table-RowOverlay:selected:unfocused, Table-RowOverlay:linesvisible:even:selected
 }
 
 /*** FORMS ****/
-Text.workbench_form_text {
-	box-shadow: inset 0 0 0px #bdbdbd;
-	padding: 2px 8px 2px 8px;
-	border: 0px solid #f4f6f7;
-}
+/* Text.workbench_form_text { */
+/* 	box-shadow: inset 0 0 0px #bdbdbd; */
+/* 	padding: 2px 8px 2px 8px; */
+/* 	border: 0px solid #f4f6f7; */
+/* } */
 
-Text.workbench_form_text:focused {
-	padding: 2px 8px 2px 8px;
-	border: 2px solid red;
-	box-shadow: inset 0 0 1px #bdbdbd;
-}
+/* Text.workbench_form_text:focused { */
+/* 	padding: 2px 8px 2px 8px; */
+/* 	border: 2px solid red; */
+/* 	box-shadow: inset 0 0 1px #bdbdbd; */
+/* } */
 
 
 
