--- a/org.argeo.suite.theme.default/rap/work.css
+++ b/org.argeo.suite.theme.default/rap/work.css
@@ -10,14 +10,17 @@
 }
 
 .argeo-suite-leadPane {
-	font: bold 14px sans-serif;
-	background-color:#ddd;
+	background-color: #eee;
 }
 
-Button.argeo-suite-leadPane {
-	font: bold 14px sans-serif;
-	color: white;
-	background-color: white;
+Label.argeo-suite-leadPane {
+	font: 14px sans-serif;
+	color: #888;
+	background-color: #eee;
+}
+
+Button.argeo-suite-leadPane:hover {
+	cursor:pointer;
 }
 
 .argeo-suite-recentItems {
@@ -45,59 +48,74 @@ Button.argeo-suite-leadPane {
 }
 
 .argeo-suite-simpleLabel {
-	font:bold 14px sans-serif;
-	padding:0 0 0 8px;
+	font: bold 14px sans-serif;
+	padding: 0 0 0 8px;
 }
 
 .argeo-suite-simpleText {
+	
 }
 
-.argeo-suite-titleCell{
-	font:bold 14px sans-serif;
-	background-color:#ddd;
+.argeo-suite-titleCell {
+	font: bold 14px sans-serif;
+	background-color: #ddd;
 }
 
 .argeo-suite-inlineButton {
-	padding:0px 4px;
+	padding: 0px 4px;
 	font: 12px sans-serif;
-	border:1px solid white;
-	color:white;
-	background-image:none;
-	background-color:#00294b;
+	border: 1px solid white;
+	color: white;
+	background-image: none;
+	background-color: #00294b;
 }
 
 .argeo-suite-inlineButton:hover {
-	color:#00294b;
-	background-color:white;
+	color: #00294b;
+	background-color: white;
 }
 
-
+Composite.argeo-suite-mainTabBody {
+	background-color: #eee;
+	border: 1px solid #bbb;
+}
 
 .argeo-suite-mainTab {
-	background-color:#ddd;
-	border:1px solid #bbb;
+	background-color: #eee;
+	border: 1px solid #bbb;
+}
+
+ToolItem.argeo-suite-mainTab {
+	border: none;
+	background-color: #eee;
 }
 
 Button.argeo-suite-mainTab {
-	border:none;
-	background-color:#ddd;
+	border: none;
+	background-color: #eee;
 }
 
 .argeo-suite-mainTab:hover {
-	background-color:#eee;
+	background-color: #eee;
 }
 
 Button.argeo-suite-mainTab:hover {
-	cursor:pointer;
-	background-color:#eee;
+	cursor: pointer;
+	background-color: #eee;
 }
 
 .argeo-suite-mainTabSelected {
-	font:bold 14px sans-serif;
-	color:white;
-	background-color:#00294b;
+	font: bold 14px sans-serif;
+	color: white;
+	/*background-color: #00294b;*/
+	background-color: #5882b5;
+	border: 1px solid #00294b;
+}
+
+ToolItem.argeo-suite-mainTabSelected {
+	border: none;
 }
 
 Button.argeo-suite-mainTabSelected {
-	border:none;
+	border: none;
 }
