--- a/org.argeo.suite.theme.default/rap/work.css
+++ b/org.argeo.suite.theme.default/rap/work.css
@@ -149,3 +149,11 @@ Tree-RowOverlay:selected {
 	background-color:#5882b5;
 }
 
+TableItem{
+	background-color:#fff;
+}
+
+Table-RowOverlay:selected {
+	color:#fff;
+	background-color:#5882b5;
+}
